# csst-doc-msc

./: README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/cpic/: algorithm.rst  cpic.rst  data_model.md
docs/source/ifs/: data_model.md  ifs.rst
docs/source/mbi/: algorithm.rst  data_model.md  index.rst  mbi.rst
docs/source/mbi/data_model/: l1.rst  l2.rst
docs/source/mci/: algorithm.rst
docs/source/ooc/: ooc.rst
docs/source/sls/: algorithm.rst  api.rst  data_model.md  data_model.rst  index.rst  sls1d.rst
docs/source/sls/data_model/: l1.rst  l2.rst
docs/source/thz/: thz.rst
